--- a/gb/19/11/29/n11688688.md
+++ b/gb/19/11/29/n11688688.md
@@ -1,14 +1,14 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/qtfwow338/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/qtfwow338/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/qtfwow338/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/qtfwow338/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/qtfwow338/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/qtfwow338/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/qtfwow338/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/qtfwow338/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/qtfwow338/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/qtfwow338/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/qtfwow338/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/qtfwow338/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/qtfwow338/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/qtfwow338/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/qtfwow338/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/qtfwow338/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/qtfwow338/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/qtfwow338/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/qtfwow338/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/qtfwow338/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/qtfwow338/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/qtfwow338/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/qtfwow338/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/qtfwow338/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/qtfwow338/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/qtfwow338/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/qtfwow338/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/qtfwow338/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/qtfwow338/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/qtfwow338/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/qtfwow338/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/qtfwow338/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/qtfwow338/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/qtfwow338/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/qtfwow338/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/qtfwow338/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/qtfwow338/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/qtfwow338/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/qtfwow338/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/qtfwow338/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/qtfwow338/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/qtfwow338/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/qtfwow338/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/qtfwow338/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/qtfwow338/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/qtfwow338/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/qtfwow338/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eizauy3553/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>“社区健康照护网”网路平台  双向转诊利多</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2019/11/40177342d9035a77357ac19820e566e3-600x400.jpg" />
 <h6>延平诊所周志勃医师说明社区照护网平台有助于推动双向转诊。（徐乃义／大纪元）
 </h6>
 <hr>
-<p>【大纪元2019年11月29日讯】（大纪元记者徐乃义台湾<ahref="https://github.com/qtfwow338/djy/blob/master/gb/tag/%E6%A1%83%E5%9B%AD.md#1">桃园</a>报导）桃园市<ahref="https://github.com/qtfwow338/djy/blob/master/gb/tag/%E8%81%94%E6%96%B0%E5%9B%BD%E9%99%85%E5%8C%BB%E9%99%A2.md#1">联新国际医院</a>自行开发“<ahref="https://github.com/qtfwow338/djy/blob/master/gb/tag/%E7%A4%BE%E5%8C%BA%E5%81%A5%E5%BA%B7%E7%85%A7%E6%8A%A4%E7%BD%91.md#1">社区健康照护网</a>”<ahref="https://github.com/qtfwow338/djy/blob/master/gb/tag/%E7%BD%91%E8%B7%AF%E5%B9%B3%E5%8F%B0.md#1">网路平台</a>，提供医疗相关机构免费注体登入使用，全<ahref="https://github.com/qtfwow338/djy/blob/master/gb/tag/%E6%A1%83%E5%9B%AD.md#1">桃园</a>市已超过250家透过该系统进行双向转诊等服务。社照网进一步结合雁行计划分级医疗政策，提供快速的双向转诊服务，包括预约额满保留3个加挂号名额、诊所与医师同步掌握就医状态与治疗用药、即时通知及留言平台帮医师不漏接病情讯息、住院期间诊所医师关怀访视等，让转诊医疗衔接真正达到零时差，市民获得即时的完善照护。</p>
-<p>“<ahref="https://github.com/qtfwow338/djy/blob/master/gb/tag/%E7%A4%BE%E5%8C%BA%E5%81%A5%E5%BA%B7%E7%85%A7%E6%8A%A4%E7%BD%91.md#1">社区健康照护网</a>”垂直整合医院与诊所的医疗照护，鼓励民众“小病看小诊所，大病到大医院”，推动双向转诊制度，开业医师延平诊所院长周志勃表示，社照网的平台设计，包括转介挂号与回报、转介记录查询、住院关怀访视预约、医疗讯息留言等功能，帮助诊所医师在转诊的医疗衔接方面更加周全，提高民众在社区诊所看病的意愿。</p>
-<p>透过社照网转介平台挂号，<ahref="https://github.com/qtfwow338/djy/blob/master/gb/tag/%E8%81%94%E6%96%B0%E5%9B%BD%E9%99%85%E5%8C%BB%E9%99%A2.md#1">联新国际医院</a>对于预约额满的诊次，提供3个保留名额，让民众可以放心在基层诊所看病，不必直接跑大医院。转介挂号病人于看诊当天，社照网系统会主动通知医师，让诊所可以在第一时间掌握病人就医状况。当民众在医院治疗结束后转诊回诊所，原诊所医师可以透过社照网平台与健保医疗资讯云端查询系统，即时查询民众在医院时的各项就医处置、检验，以及检查影像报告等资讯，方便民众转诊回到原诊所持续就医或追踪。</p>
+<p>【大纪元2019年11月29日讯】（大纪元记者徐乃义台湾<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%A1%83%E5%9B%AD.md#1">桃园</a>报导）桃园市<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E8%81%94%E6%96%B0%E5%9B%BD%E9%99%85%E5%8C%BB%E9%99%A2.md#1">联新国际医院</a>自行开发“<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E7%A4%BE%E5%8C%BA%E5%81%A5%E5%BA%B7%E7%85%A7%E6%8A%A4%E7%BD%91.md#1">社区健康照护网</a>”<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E7%BD%91%E8%B7%AF%E5%B9%B3%E5%8F%B0.md#1">网路平台</a>，提供医疗相关机构免费注体登入使用，全<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%A1%83%E5%9B%AD.md#1">桃园</a>市已超过250家透过该系统进行双向转诊等服务。社照网进一步结合雁行计划分级医疗政策，提供快速的双向转诊服务，包括预约额满保留3个加挂号名额、诊所与医师同步掌握就医状态与治疗用药、即时通知及留言平台帮医师不漏接病情讯息、住院期间诊所医师关怀访视等，让转诊医疗衔接真正达到零时差，市民获得即时的完善照护。</p>
+<p>“<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E7%A4%BE%E5%8C%BA%E5%81%A5%E5%BA%B7%E7%85%A7%E6%8A%A4%E7%BD%91.md#1">社区健康照护网</a>”垂直整合医院与诊所的医疗照护，鼓励民众“小病看小诊所，大病到大医院”，推动双向转诊制度，开业医师延平诊所院长周志勃表示，社照网的平台设计，包括转介挂号与回报、转介记录查询、住院关怀访视预约、医疗讯息留言等功能，帮助诊所医师在转诊的医疗衔接方面更加周全，提高民众在社区诊所看病的意愿。</p>
+<p>透过社照网转介平台挂号，<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E8%81%94%E6%96%B0%E5%9B%BD%E9%99%85%E5%8C%BB%E9%99%A2.md#1">联新国际医院</a>对于预约额满的诊次，提供3个保留名额，让民众可以放心在基层诊所看病，不必直接跑大医院。转介挂号病人于看诊当天，社照网系统会主动通知医师，让诊所可以在第一时间掌握病人就医状况。当民众在医院治疗结束后转诊回诊所，原诊所医师可以透过社照网平台与健保医疗资讯云端查询系统，即时查询民众在医院时的各项就医处置、检验，以及检查影像报告等资讯，方便民众转诊回到原诊所持续就医或追踪。</p>
 <p>周志勃强调，社照网平台提供完整医疗资讯，让诊所医师对患者治疗与病情充分了解，即使住院期间亦能全程掌握，病人也会更加安心，如此将有利病患转转回社区诊所，继续衔接零时差的医疗照护。</p>
 <p>社照网以主动通知提醒方式，让医师繁忙之余不会遗漏重要讯息。特色功能“心声与建议”，以“病人为中心”理念，提供诊所与医院医师互动留言，将治疗过程的病情变化与注意事项，进行经验分享讨论。诊所医师可充分了解病人完整情况，民众在基层院所看病更有信心，有利推动分级医疗。</p>
 <p>社区健康照护网整合转诊、住院关怀、用药资讯、医疗新知等功能，联新国际医院医疗群会员机构逾250多家安装使用，近200家为医院及诊所；雁行计划团队亦有超过半数医疗院所成员同步采用，社区健康照护网让医疗群团队合作更加紧密，落实分级医疗与双向转诊，提供民众完整的医疗照护。◇</p>
@@ -18,41 +18,47 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/qtfwow338/djy/blob/master/gb/18/5/25/n10425985.md#1">坜新医院结合全国第一个社区医疗群</a></li>
-<li><a href="https://github.com/qtfwow338/djy/blob/master/gb/19/5/28/n11284163.md#1">分级医疗与双向转诊 获得最完善的医疗照护</a></li>
-<li><a href="https://github.com/qtfwow338/djy/blob/master/gb/19/6/27/n11348815.md#1">睡眠障碍莫轻忽 雁行专案顾健康</a></li>
-<li><a href="https://github.com/qtfwow338/djy/blob/master/gb/19/9/27/n11549664.md#1">装设心脏节律器治疗心搏过缓  出院后看慢性病</a></li>
-<li><a href="https://github.com/qtfwow338/djy/blob/master/gb/19/10/28/n11616754.md#1">季节性忧郁症  秋冬日照减少易上身</a></li>
-<li><a href="https://github.com/qtfwow338/djy/blob/master/gb/22/2/27/n13608505.md#1">桃园暴增11例幼儿园案  传播链累计14染疫</a></li>
-<li><a href="https://github.com/qtfwow338/djy/blob/master/gb/22/2/27/n13608288.md#1">季新景点  客庄农游特色手作好好玩</a></li>
-<li><a href="https://github.com/qtfwow338/djy/blob/master/gb/22/2/27/n13607921.md#1">桃园杨梅警缉毒 侦破大麻栽种场</a></li>
-<li><a href="https://github.com/qtfwow338/djy/blob/master/gb/22/2/27/n13608107.md#1">如此冲动桃园情侣争吵 车失控撞槟榔摊2受伤</a></li>
-<li><a href="https://github.com/qtfwow338/djy/blob/master/gb/22/2/27/n13608113.md#1">8旬老翁失踪一天一夜 大园警抽丝剥茧寻获</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/5/25/n10425985.md#1">坜新医院结合全国第一个社区医疗群</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/5/28/n11284163.md#1">分级医疗与双向转诊 获得最完善的医疗照护</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/6/27/n11348815.md#1">睡眠障碍莫轻忽 雁行专案顾健康</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/9/27/n11549664.md#1">装设心脏节律器治疗心搏过缓  出院后看慢性病</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/10/28/n11616754.md#1">季节性忧郁症  秋冬日照减少易上身</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13680757.md#1">全台最大彩色海芋花海 与你芋见爱神</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13680775.md#1">争取最佳好青年 身障青年比赞“我好棒！”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13680378.md#1">2022桃捷挺桃猿  与Rakuten Girls一起“捷乘应猿”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13680297.md#1">桃园老翁遭骗入会员 操作ATM遇警保老本</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13680101.md#1">桃园大湳森林公园打造“都市绿洲”</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank">人心向善 大陆当初盛况</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/6/8/n11308535.md#1" target="_blank">金雁：“既得利益者”何以成为反对苏维埃的先锋?</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/30/n11289569.md#1" target="_blank">纽约州六位参议员祝贺法轮大法日</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank">中共迫害良心律师</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/12/30/n10007999.md#1" target="_blank">文武：反“礼教”与中共罪恶</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/12/25/n10932219.md#1" target="_blank">褒奖法轮功 推崇普世价值</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/qtfwow338/djy/blob/master/gb/20/3/16/n11945071.md#1">【新闻看点】官媒忙降温？赵立坚及五毛被打脸</a></li>
-<li><a href="https://github.com/qtfwow338/djy/blob/master/gb/20/3/16/n11943071.md#1">【现场视频】武汉医生揭中共关闭方舱内幕</a></li>
-<li><a href="https://github.com/qtfwow338/djy/blob/master/gb/20/3/15/n11942229.md#1">大陆原卫生高官：疫情恐再爆发 谎言将破灭</a></li>
-<li><a href="https://github.com/qtfwow338/djy/blob/master/gb/20/3/16/n11945291.md#1">蓬佩奥与杨洁篪通话 正告北京勿散怪诞谣言</a></li>
-<li><a href="https://github.com/qtfwow338/djy/blob/master/gb/20/3/15/n11942593.md#1">【疫情透视】港抗疫显奇迹 天灭中共成保命符</a></li>
-<li><a href="https://github.com/qtfwow338/djy/blob/master/gb/20/3/17/n11946544.md#1">台歌仔戏国宝小凤仙病逝 享寿80岁　</a></li>
-<li><a href="https://github.com/qtfwow338/djy/blob/master/gb/20/3/15/n11942589.md#1">赵立坚甩锅病毒源自美国 艺人黄秋生狠酸中共</a></li>
-<li><a href="https://github.com/qtfwow338/djy/blob/master/gb/20/3/15/n11942781.md#1">潘迎紫呼吸道感染急就医 被要求检测新冠病毒</a></li>
-<li><a href="https://github.com/qtfwow338/djy/blob/master/gb/20/3/15/n11942415.md#1">西班牙疫情大爆发 梁咏琪一家三口封城前返港</a></li>
-<li><a href="https://github.com/qtfwow338/djy/blob/master/gb/20/3/16/n11945468.md#1">赵丽颖复工晒片场照 吊超高威亚压根看不到人</a></li>
-<li><a href="https://github.com/qtfwow338/djy/blob/master/gb/20/3/11/n11933369.md#1">清朝学士三奇梦 是谁掌握他的一生？</a></li>
-<li><a href="https://github.com/qtfwow338/djy/blob/master/gb/20/1/2/n11764074.md#1">他们身上的毒疮 原来是夙怨</a></li>
-<li><a href="https://github.com/qtfwow338/djy/blob/master/gb/13/1/31/n3790016.md#1">米开朗基罗Michelangelo（1）早年生涯</a></li>
-<li><a href="https://github.com/qtfwow338/djy/blob/master/gb/20/3/7/n11923201.md#1">【历史回眸】抵抗极权 最简单的方法是拒绝说谎</a></li>
-<li><a href="https://github.com/qtfwow338/djy/blob/master/gb/20/3/11/n11933376.md#1">僧人精准预言 琅琊三孩童竟是“真一品”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/12/16/n13442125.md#1">【百年真相】云南省委书记案 138万人受牵连</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13632196.md#1">【百年真相】三件大坏事 江泽民最想让人遗忘</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13671140.md#1">【未解之谜】沙中庞贝 楼兰之谜</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/16/n13649079.md#1">【人生之钥】败家子卖田地卖金玉 结局出人意料</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/2/17/n13582749.md#1">【奇术】看风也能预知命运和兴衰成败</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13679009.md#1">【秦鹏直播】为李莹发声险被抓 王圣强：不怕消失</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13679468.md#1">【探索时分】叙利亚雇佣兵能帮上俄罗斯吗？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13679596.md#1">【远见快评】传普京重大让步 乌克兰中立秘辛</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13675009.md#1">五大战区部署歼-20 中共空军意欲何为</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13669168.md#1">配F-35C等舰载机 美福特号航母已准备好战斗</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674635.md#1">六四领袖被刺杀 FBI盯上中共间谍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676833.md#1">47岁林志玲产后首晒照 获赞“最美妈咪”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678198.md#1">威尔史密斯奥斯卡台上打人 摘影帝后致歉落泪</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678918.md#1">大S具俊晔已在台湾完成登记 结婚纪念日选这天</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676987.md#1">威尔?史密斯上台搧颁奖人 杜汶泽一假设引共鸣</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13675982.md#1">《柏捷顿家族：名门韵事》第二季影评：三角恋难题 仍可圆满解决</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13677065.md#1">新筛查方法可查出95%一期胰腺癌</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673047.md#1">搭机4点让旅途更安全 资深空姐：选飞机很重要</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/19/n13657423.md#1">吃对了肌肤就漂亮 10大食材为肌肤打底</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674013.md#1">吃奇异果不用削皮 连皮一起吃营养更加倍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676145.md#1">为什么新衣服在穿着之前要先洗涤？</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/qtfwow338/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/qtfwow338/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/11/29/n11688688.htm">“社区健康照护网”网路平台  双向转诊利多</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/11/29/n11688688.htm">“社区健康照护网”网路平台  双向转诊利多</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/qtfwow338/djy/blob/master/gb/19/11/29/n11688688.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/qtfwow338/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qtfwow338/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/qtfwow338/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/qtfwow338/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/qtfwow338/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qtfwow338/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/qtfwow338/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qtfwow338/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/qtfwow338/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qtfwow338/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/qtfwow338/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qtfwow338/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/qtfwow338/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qtfwow338/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/qtfwow338/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qtfwow338/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/qtfwow338/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qtfwow338/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/qtfwow338/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qtfwow338/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/qtfwow338/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qtfwow338/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/qtfwow338/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qtfwow338/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/qtfwow338/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qtfwow338/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/qtfwow338/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qtfwow338/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/qtfwow338/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qtfwow338/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/qtfwow338/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qtfwow338/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/qtfwow338/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qtfwow338/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/qtfwow338/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qtfwow338/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/qtfwow338/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qtfwow338/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/qtfwow338/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qtfwow338/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/qtfwow338/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qtfwow338/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/qtfwow338/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qtfwow338/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/qtfwow338/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qtfwow338/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/qtfwow338/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qtfwow338/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/eizauy3553/djy/blob/master/gb/19/11/29/n11688688.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
